--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,12 @@ name: CI_action
 on:
   push:
     branches: [main]
+    paths:
+      - 'worksheet2/my-react-app/**'
   pull_request:
     branches: [main]
+    paths:
+      - 'worksheet2/my-react-app/**'
 
 jobs:
   build:
@@ -25,9 +29,12 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      working-directory: worksheet2/my-react-app
 
     - name: Run the tests
       run: npm test
+      working-directory: worksheet2/my-react-app
 
     - name: Build
       run: npm run build
+      working-directory: worksheet2/my-react-app
